--- a/src/pages/SignUpPage/SignUpPage.css
+++ b/src/pages/SignUpPage/SignUpPage.css
@@ -1,4 +1,4 @@
-div {
+.sign-up-container {
   display: flex;
   justify-content: center;
 }
